Proyecto2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/target-type: ip
    nginx.org/listen-ports: '[80,3001,7070,8000,8080]'
    nginx.org/listen-ports-ssl: '[443]'
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /grpc/
        pathType: Prefix
        backend:
          service:
            name: service-producer-grcp
            port:
              number: 7070
      - path: /rust/
        pathType: Prefix
        backend:
          service:
            name: service-rust
            port:
              number: 8000
